--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example.kubepromjaeger</groupId>
+	<groupId>com.example.kubeotprom</groupId>
 	<artifactId>parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>Kubernetes Prometheus Jaeger Demo</name>
+	<name>Kubernetes OpenTracing Prometheus Demo</name>
 	<description>
 		Example demonstrating a simple two service application, deployed to Kubernetes,
-		that reports metrics and tracing data to Prometheus and Jaeger respectively.
+		that reports metrics and tracing data to Prometheus and OpenTracing respectively.
 	</description>
 
 	<modules>
