Enhance services to enable error spans to be created, and add a script for generating random requests - and also a grafana dashboard example for showing the prometheus metrics

--- a/simple/services-kubernetes.yml
+++ b/simple/services-kubernetes.yml
@@ -24,6 +24,8 @@ spec:
             value: const
           - name: JAEGER_SAMPLER_PARAM
             value: "1"
+          - name: SERVICE2_URL
+            value: "http://service2:8080"
 ---
 kind: Service
 apiVersion: v1
