--- a/simple/ordermgr/src/main/docker/Dockerfile
+++ b/simple/ordermgr/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
-ADD service1-0.0.1-SNAPSHOT.jar app.jar
+ADD kubeotprom-ordermgr-0.0.1-SNAPSHOT.jar app.jar
 RUN sh -c 'touch /app.jar'
 ENV JAVA_OPTS=""
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -jar /app.jar" ]
