--- a/simple/ordermgr/pom.xml
+++ b/simple/ordermgr/pom.xml
@@ -23,7 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
-		<jaeger.version>0.20.0-SNAPSHOT</jaeger.version>
+		<jaeger.version>0.20.0</jaeger.version>
 		<java-metrics.version>0.1.0</java-metrics.version>
 		<prometheus.version>0.0.23</prometheus.version>
 		<opentracing-contrib-springweb.version>0.0.6</opentracing-contrib-springweb.version>
