--- a/simple/services-kubernetes.yml
+++ b/simple/services-kubernetes.yml
@@ -26,6 +26,8 @@ spec:
             value: "1"
           - name: JAEGER_REPORTER_LOG_SPANS
             value: "true"
+          - name: JAEGER_TAGS
+            value: "version=${VERSION}"
           - name: ACCOUNTMGR_URL
             value: "http://accountmgr:8080"
 ---
@@ -86,6 +88,8 @@ spec:
             value: "1"
           - name: JAEGER_REPORTER_LOG_SPANS
             value: "true"
+          - name: JAEGER_TAGS
+            value: "version=${VERSION}"
 ---
 kind: Service
 apiVersion: v1
