--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.example.kubeotprom</groupId>
 	<artifactId>kubeotprom-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 
 	<name>Kubernetes OpenTracing Prometheus Demo</name>
