--- a/simple/ordermgr/pom.xml
+++ b/simple/ordermgr/pom.xml
@@ -26,8 +26,8 @@
 		<jaeger.version>0.20.6</jaeger.version>
 		<java-metrics.version>0.1.1</java-metrics.version>
 		<prometheus.version>0.0.23</prometheus.version>
-		<opentracing-contrib-springweb.version>0.0.7</opentracing-contrib-springweb.version>
-		<version.opentracing.contrib.opentracing-metrics>0.1.3</version.opentracing.contrib.opentracing-metrics>
+		<opentracing-contrib-springweb.version>0.0.8</opentracing-contrib-springweb.version>
+		<opentracing-contrib-opentracing-metrics.version>0.1.3</opentracing-contrib-opentracing-metrics.version>
 	</properties>
 
 	<dependencies>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>io.opentracing.contrib</groupId>
 			<artifactId>opentracing-metrics-prometheus-spring-autoconfigure</artifactId>
-			<version>${version.opentracing.contrib.opentracing-metrics}</version>
+			<version>${opentracing-contrib-opentracing-metrics.version}</version>
 		</dependency>
 
 		<dependency>
