--- a/simple/accountmgr/pom.xml
+++ b/simple/accountmgr/pom.xml
@@ -25,8 +25,8 @@
 
 		<jaeger.version>0.20.6</jaeger.version>
 		<prometheus.version>0.0.23</prometheus.version>
-		<opentracing-contrib-springweb.version>0.0.8</opentracing-contrib-springweb.version>
-		<opentracing-contrib-opentracing-metrics.version>0.1.3</opentracing-contrib-opentracing-metrics.version>
+		<opentracing-contrib-springweb.version>0.0.9-SNAPSHOT</opentracing-contrib-springweb.version>
+		<opentracing-contrib-opentracing-metrics.version>0.1.4-SNAPSHOT</opentracing-contrib-opentracing-metrics.version>
 	</properties>
 
 	<dependencies>
