Fix version of prom-operator to 0.11 to provide consistent config for Kubernetes and Openshift

--- a/simple/services-kubernetes.yml
+++ b/simple/services-kubernetes.yml
@@ -49,7 +49,7 @@ spec:
     protocol: TCP
     targetPort: web
 ---
-apiVersion: monitoring.coreos.com/v1
+apiVersion: monitoring.coreos.com/v1alpha1
 kind: ServiceMonitor
 metadata:
   name: ordermgr
@@ -111,7 +111,7 @@ spec:
     protocol: TCP
     targetPort: web
 ---
-apiVersion: monitoring.coreos.com/v1
+apiVersion: monitoring.coreos.com/v1alpha1
 kind: ServiceMonitor
 metadata:
   name: accountmgr
