change the scrape match based on an annotation to be consistent with the prometheus official examples.

--- a/simple/services-kubernetes.yml
+++ b/simple/services-kubernetes.yml
@@ -39,7 +39,8 @@ metadata:
   name: ordermgr
   labels:
     app: ordermgr
-    scrape: "true"
+  annotations:
+    prometheus.io/scrape: "true"
 spec:
   type: LoadBalancer
   selector:
@@ -89,7 +90,8 @@ metadata:
   name: accountmgr
   labels:
     app: accountmgr
-    scrape: "true"
+  annotations:
+    prometheus.io/scrape: "true"
 spec:
   type: LoadBalancer
   selector:
