Update labels used by prometheus

--- a/prometheus-kubernetes.yml
+++ b/prometheus-kubernetes.yml
@@ -71,10 +71,10 @@ data:
         regex: __meta_kubernetes_pod_label_(.+)
       - source_labels: [__meta_kubernetes_namespace]
         action: replace
-        target_label: kubernetes_namespace
+        target_label: namespace
       - source_labels: [__meta_kubernetes_pod_name]
         action: replace
-        target_label: kubernetes_pod_name
+        target_label: pod
 ---
 apiVersion: v1
 kind: Service
