--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -22,9 +22,9 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.spotify</groupId>
+				<groupId>io.fabric8</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.11</version>
+				<version>0.23.0</version>
 				<configuration>
 					<skipDockerBuild>true</skipDockerBuild>
 				</configuration>
