--- a/simple/services-canary-kubernetes.yml
+++ b/simple/services-canary-kubernetes.yml
@@ -15,6 +15,8 @@ spec:
         ports:
         - name: web
           containerPort: 8080
+        - name: prometheus-jmx
+          containerPort: 9099
         env:
           - name: JAEGER_SERVICE_NAME
             value: ordermgr
@@ -50,6 +52,8 @@ spec:
         ports:
         - name: web
           containerPort: 8080
+        - name: prometheus-jmx
+          containerPort: 9099
         env:
           - name: JAEGER_SERVICE_NAME
             value: accountmgr
