--- a/simple/ordermgr/pom.xml
+++ b/simple/ordermgr/pom.xml
@@ -25,7 +25,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
-		<jaeger.version>0.21.0</jaeger.version>
+		<jaeger.version>0.22.0-RC3</jaeger.version>
 		<prometheus.version>0.0.23</prometheus.version>
 		<prometheus.jmx-exporter.version>0.10</prometheus.jmx-exporter.version>
 		<opentracing-contrib-springweb.version>0.0.12</opentracing-contrib-springweb.version>
@@ -54,6 +54,11 @@
 		<dependency>
 			<groupId>com.uber.jaeger</groupId>
 			<artifactId>jaeger-tracerresolver</artifactId>
+			<version>${jaeger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.uber.jaeger</groupId>
+			<artifactId>jaeger-b3</artifactId>
 			<version>${jaeger.version}</version>
 		</dependency>
 
