--- a/simple/services-istio-kubernetes.yml
+++ b/simple/services-istio-kubernetes.yml
@@ -12,6 +12,7 @@ spec:
         version: 0.0.1
       annotations:
         prometheus.io/scrape: "true"
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: ordermgr 
@@ -25,7 +26,9 @@ spec:
           - name: JAEGER_SERVICE_NAME
             value: ordermgr
           - name: JAEGER_AGENT_HOST
-            value: jaeger-agent.istio-system
+            valueFrom:
+              fieldRef:
+                fieldPath: status.hostIP
           - name: JAEGER_SAMPLER_TYPE
             value: const
           - name: JAEGER_SAMPLER_PARAM
@@ -69,6 +72,7 @@ spec:
         version: 0.0.1
       annotations:
         prometheus.io/scrape: "true"
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: accountmgr 
@@ -82,7 +86,9 @@ spec:
           - name: JAEGER_SERVICE_NAME
             value: accountmgr
           - name: JAEGER_AGENT_HOST
-            value: jaeger-agent.istio-system
+            valueFrom:
+              fieldRef:
+                fieldPath: status.hostIP
           - name: JAEGER_SAMPLER_TYPE
             value: const
           - name: JAEGER_SAMPLER_PARAM
