--- a/simple/accountmgr/pom.xml
+++ b/simple/accountmgr/pom.xml
@@ -25,7 +25,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
-		<jaeger.version>0.27.0</jaeger.version>
+		<jaeger.version>0.30.0</jaeger.version>
 		<prometheus.version>0.0.23</prometheus.version>
 		<prometheus.jmx-exporter.version>0.10</prometheus.jmx-exporter.version>
 		<opentracing-contrib-springcloud.version>0.1.6</opentracing-contrib-springcloud.version>
@@ -54,6 +54,11 @@
 		<dependency>
 			<groupId>io.jaegertracing</groupId>
 			<artifactId>jaeger-tracerresolver</artifactId>
+			<version>${jaeger.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jaegertracing</groupId>
+			<artifactId>jaeger-thrift</artifactId>
 			<version>${jaeger.version}</version>
 		</dependency>
 
